# amazon-kinesis-video-streams-demos

./: .gitignore  .gitmodules  .travis.yml  README.md
canary/producer-c/: .gitignore  CMakeLists.txt  README.md  canary.json  cert_setup.sh  check-clang.sh  generate-iot-credentials.sh  init.sh
canary/producer-c/CMake/Dependencies/: libcppsdk-CMakeLists.txt  libkvsProducerC-CMakeLists.txt
canary/producer-c/canary/: CanaryLogsUtils.cpp  CanaryStreamUtils.cpp  CanaryUtils.h  KvsProducerSampleCloudwatch.cpp
canary/producer-c/jobs/: canary_seed.groovy  orchestrator.groovy  runner.groovy
canary/producer-cpp/: CMakeLists.txt  README.md  canary_cpp_config  cert_setup.sh  generate-iot-credentials.sh
canary/producer-cpp/CMake/: Utilities.cmake
canary/producer-cpp/CMake/Dependencies/: libcppsdk-CMakeLists.txt  libkvsProducerCPP-CMakeLists.txt  libkvsProducerCpp-CMakeLists.txt
canary/producer-cpp/jobs/: canary_seed.groovy  orchestrator.groovy  runner.groovy
canary/producer-cpp/open-source/libkvsProducerC/: CMakeCache.txt  Makefile  cmake_install.cmake
canary/producer-cpp/open-source/libkvsProducerCPP/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
canary/producer-cpp/open-source/libopenssl/: CMakeCache.txt  Makefile  cmake_install.cmake
canary/producer-cpp/open-source/libwebsockets/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
canary/producer-cpp/scripts/: cert_setup.sh  generate-iot-credentials.sh  initenv.sh
canary/producer-cpp/src/: Canary.cpp  CanaryCallbackProvider.cpp  CanaryCallbackProvider.h  CanaryConfig.cpp  CanaryConfig.h  CanaryLogs.cpp  CanaryLogs.h  CustomData.cpp  CustomData.h  Include.h
canary/webrtc-c/: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  config_certs.sh  generate-iot-credential.sh  init.sh  mediaStorageTest.txt  run-continuous.sh  storageTest.txt  toConsumer.txt  webrtc-canary-runner-1-Webrtc5min.txt
canary/webrtc-c/assets/h264SampleFrames/: README.md  frame-0001.h264  frame-0002.h264  frame-0003.h264  frame-0004.h264  frame-0005.h264  frame-0006.h264  frame-0007.h264  frame-0008.h264  frame-0009.h264  frame-0010.h264  frame-0011.h264  frame-0012.h264  frame-0013.h264  frame-0014.h264  frame-0015.h264  frame-0016.h264  frame-0017.h264  frame-0018.h264  frame-0019.h264  frame-0020.h264  frame-0021.h264  frame-0022.h264  frame-0023.h264  frame-0024.h264  frame-0025.h264  frame-0026.h264  frame-0027.h264  frame-0028.h264  frame-0029.h264  frame-0030.h264  frame-0031.h264  frame-0032.h264  frame-0033.h264  frame-0034.h264  frame-0035.h264  frame-0036.h264  frame-0037.h264  frame-0038.h264  frame-0039.h264  (+4637 more)
canary/webrtc-c/assets/opusSampleFrames/: sample-0000.opus  sample-0001.opus  sample-0002.opus  sample-0003.opus  sample-0004.opus  sample-0005.opus  sample-0006.opus  sample-0007.opus  sample-0008.opus  sample-0009.opus  sample-0010.opus  sample-0011.opus  sample-0012.opus  sample-0013.opus  sample-0014.opus  sample-0015.opus  sample-0016.opus  sample-0017.opus  sample-0018.opus  sample-0019.opus  sample-0020.opus  sample-0021.opus  sample-0022.opus  sample-0023.opus  sample-0024.opus  sample-0025.opus  sample-0026.opus  sample-0027.opus  (+7770 more)
canary/webrtc-c/docs/: alarm-sop.md  update-flow.drawio
canary/webrtc-c/jobs/: gamma-orchestrator.groovy  gamma-runner.groovy  gamma-seed.groovy  gamma_orchestrator.groovy  gamma_runner.groovy  gamma_seed.groovy  js-storage-gamma-tests.groovy  orchestrator.groovy  runner.groovy  seed.groovy  storage_runner.groovy
canary/webrtc-c/scripts/: build-storage-master.sh  cert_setup.sh  chrome-headless.js  cloudwatch.js  fetch-asset-set.sh  generate-iot-credential.sh  ingestion_init.sh  init.sh  init_iot.sh  join-storage-viewer.sh  package-lock.json  package.json  prepare-storage-viewer.sh  push-code-update-metric.sh  run-storage-viewer.sh  setup-storage-viewer.sh  split_h264_aus.py  v_init.sh
canary/webrtc-c/src/: CanarySignaling.cpp  CanaryWebrtc.cpp  CanaryWebrtcIngestion.cpp  CanaryWebrtcStorage.cpp  Cloudwatch.cpp  Cloudwatch.h  CloudwatchMonitoring.cpp  CloudwatchMonitoring.h  Config.cpp  Config.h  Include.h  Peer.cpp  Peer.h  configText
canary/webrtc-c/templates/: cfd_profiling_template.yaml
gst/gst-kvs-plugin/: .gitignore  CMakeLists.txt  README.md  check-clang.sh
gst/gst-kvs-plugin/CMake/: Utilities.cmake
gst/gst-kvs-plugin/src/: GstPlugin.c  GstPlugin.h  GstPluginUtils.c  GstPluginUtils.h  KvsProducer.c  KvsProducer.h  KvsWebRtc.c  KvsWebRtc.h
producer-c/producer-cloudwatch-integ/: CMakeLists.txt  CanaryLogsUtils.cpp  CanaryStreamUtils.cpp  CanaryStreamUtils.h  KvsProducerSampleCloudwatch.cpp  README.md  canary.json  init.sh
producer-c/producer-cloudwatch-integ/CMake/: Utilities.cmake
producer-c/producer-cloudwatch-integ/canary/: CanaryLogsUtils.cpp  CanaryStreamUtils.cpp  CanaryUtils.h  KvsProducerSampleCloudwatch.cpp
producer-c/producer-cloudwatch-integ/jobs/: canary_seed.groovy  orchestrator.groovy  runner.groovy
producer_c_demos/: CMakeLists.txt
producer_c_demos/CMake/: FindMbedTLS.cmake  Utilities.cmake
producer_c_demos/CMake/Dependencies/: libjsmn-CMakeLists.txt  libmbedtls-CMakeLists.txt
producer_c_demos/samples/: KvsAacAudioVideoStreamingSample.c  KvsVideoOnlyStreamingSample.c
sigv4-signing/rust/: Cargo.toml  README.md
sigv4-signing/rust/examples/: 1_simple_connect_to_socket_sample.rs  2_fetch_endpoints_using_aws_and_connect_to_socket_sample.rs  3_signer_using_aws_sdk.rs
sigv4-signing/rust/src/: lib.rs  sigv4_signer.rs  sigv4_signer_constants.rs
sigv4-signing/rust/tests/: sigv4_signer_tests.rs  validate_wss_url.sh
test-webrtc-ep/: CMakeLists.txt
test-webrtc-ep/samples/webrtc/: CMakeLists.txt
webrtc-c/canary/: CMakeLists.txt  Makefile  README.md
webrtc-c/canary/docs/: orchestration.drawio  seeding.drawio
webrtc-c/canary/jobs/: orchestrator.groovy  runner.groovy  seed.groovy
webrtc-c/canary/src/: CanarySignaling.cpp  CanaryWebrtc.cpp  Cloudwatch.cpp  CloudwatchLogs.cpp  CloudwatchLogs.h  CloudwatchMonitoring.cpp  CloudwatchMonitoring.h  Config.cpp  Config.h  Include.h  Main.cpp  Peer.cpp  Peer.h
(+246 files in other folders)
