[package]
name = "kvs_signaling_sigv4_wss_signer"
version = "1.0.0"
edition = "2021"
authors = ["Amazon Kinesis Video Streams <kinesis-video-support@amazon.com", "Jeremy Gunawan <jggunawa@amazon.com", "Siva Somasundaram <sivasoma@amazon.com>"]

[dependencies]
chrono = "0.4.38"
sha2 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
url = "2.5.2"
tungstenite = { version = "0.24.0", features = ["native-tls"] }
aws-sdk-kinesisvideo = "1.43.0"
aws-sdk-sts = "1.42.0"
aws-config = "1.5.6"
aws-credential-types = { version = "1.2.1", features = ["hardcoded-credentials"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
rand = "0.8.5"
aws-sigv4 = "1.3.2"
aws-smithy-http = "0.62.1"
http = "1.3.1"
aws-smithy-types = "1.3.1"
